# artiq

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  1.ll  1.txt  1_subkernel_2.ll  1_subkernel_2.txt  1_subkernel_3.ll  1_subkernel_3.txt  1_subkernel_4.ll  1_subkernel_4.txt  1_subkernel_5.ll  1_subkernel_5.txt  CONTRIBUTING  CONTRIBUTING.rst  DEVELOPER_NOTES.rst  MANIFEST.in  README.rst  README_PHASER.rst  RELEASES  RELEASE_NOTES.rst  RELEASING.rst  digilent-hs2.cfg  efc.cfg  fix-rust-overlay-unpack.diff  flake.nix  hbf.vcd  iir.vcd  imports.py  install-with-conda.py  kasli.config  kasli.config198  kasli199.config  kasli199_100mhz.config  kriss.config  kriss.json  led_test.py  llvm_or1k_setup.txt  (+26 more)
.github/: pull.yml  pull_request_template.md
.travis/: get-anaconda.sh  get-misoc.sh  get-toolchain.sh  get-xilinx.sh
artiq/: __init__.py  _version.py  afws.pem  build_soc.py  compat.py  core_flash.py  experiment.py  integer_checks.py  monkey_patches.py  remoting.py  sim.py  tools.py  units.py  unparse.py
artiq/firmware/bootloader/: Cargo.toml  Makefile  bootloader.ld  build.rs  main.rs
artiq/firmware/ksupport/: Cargo.toml  Makefile  api.rs  build.rs  cxp.rs  eh.rs  eh_artiq.rs  glue.c  ksupport.ld  lib.rs  linalg.rs  mem.rs  nrt_bus.rs  rtio.rs
artiq/firmware/libboard/: Cargo.toml  ad9154.rs  ad9154_reg.rs  ad9516.rs  ad9516_reg.rs  boot.rs  build.rs  cache.rs  clock.rs  config.rs  ethmac.rs  hmc7043_gen_writes.py  hmc7043_guiexport_10gbps.py  hmc830_7043.rs  hotswap.rs  i2c.rs  ident.rs  irq.rs  lib.rs  pcr.rs  sdram.rs  serwb.rs  si5324.rs  spi.rs  spiflash.rs  spr.rs  uart_console.rs  vectors.S
artiq/firmware/libboard/or1k/: boot.rs  cache.rs  mod.rs  spr.rs
artiq/firmware/libboard_artiq/: Cargo.toml  ad9117.rs  ad9154.rs  ad9154_reg.rs  boot.rs  build.rs  drtio_eem.rs  drtio_routing.rs  drtioaux.rs  grabber.rs  hmc542.rs  hmc7043_guiexport_6gbps.py  hmc830_7043.rs  i2c.rs  i2c_eeprom.rs  jdcg.rs  jesd204sync.rs  lib.rs  mailbox.rs  pca9548.rs  pcr.rs  rpc_queue.rs  rtm_fpga.rs  serwb.rs  si5324.rs  si549.rs  slave_fpga.rs  spi.rs  wrpll.rs
artiq/firmware/libboard_misoc/: Cargo.toml  build.rs  clock.rs  config.rs  ethmac.rs  flash.rs  flash_tools.rs  i2c.rs  i2c_eeprom.rs  ident.rs  io_expander.rs  lib.rs  mmcspi.rs  net_settings.rs  sdram.rs  slave_fpga.rs  spiflash.rs  spiflash_bitstream.rs  uart.rs  uart_console.rs  uart_logger.rs
artiq/firmware/libboard_misoc/or1k/: boot.rs  cache.rs  irq.rs  vectors.S
artiq/firmware/libboard_misoc/riscv32/: boot.rs  cache.rs  irq.rs  mod.rs  pmp.rs  vectors.S
artiq/firmware/libboard_misoc/riscv32imac/: boot.rs  irq.rs  mod.rs  vectors.S
artiq/firmware/libdrtioaux/: Cargo.toml  crc32.rs  hw.rs  lib.rs  proto.rs
artiq/firmware/libio/: Cargo.toml  cursor.rs  lib.rs  proto.rs
artiq/firmware/libksupport/: Cargo.toml  ad9154.rs  api.rs  build.rs  dyld.rs  i2c.rs  lib.rs  rtio.rs
artiq/firmware/liblogger_artiq/: Cargo.toml  lib.rs
artiq/firmware/libproto/: Cargo.toml  analyzer_proto.rs  drtioaux_proto.rs  io.rs  kernel_proto.rs  lib.rs  mgmt_proto.rs  moninj_proto.rs  rpc_proto.rs  session_proto.rs
artiq/firmware/libproto_artiq/: Cargo.toml  analyzer_proto.rs  drtioaux_proto.rs  kernel_proto.rs  lib.rs  mgmt_proto.rs  moninj_proto.rs  rpc_proto.rs  session_proto.rs
artiq/firmware/libunwind/: Cargo.toml
artiq/firmware/libunwind/src/: lib.rs  libunwind.rs
artiq/firmware/runtime/: Cargo.toml  Makefile  analyzer.rs  analyzer_proto.rs  build.rs  cache.rs  clock.rs  config.rs  config_dummy.rs  dhcp.rs  ethmac.rs  ip_addr_storage.rs  kern_hwreq.rs  kernel.rs  kernel_proto.rs  lib.rs  logger.rs  mailbox.rs  main.rs  mgmt.rs  moninj.rs  moninj_proto.rs  net_settings.rs  profiler.rs  proto.rs  rpc_proto.rs  rpc_queue.rs  rtio_clocking.rs  rtio_dma.rs  rtio_mgt.rs  runtime.ld  sched.rs  session.rs  session_proto.rs  urc.rs  watchdog.rs
artiq/firmware/satman/: Cargo.toml  Makefile  analyzer.rs  aux.rs  build.rs  cache.rs  dma.rs  jdac_common.rs  jdac_requests.rs  jdcg.rs  kernel.rs  lib.rs  logger.rs  main.c  main.rs  mgmt.rs  repeater.rs  routing.rs  satman.ld
artiq/runtime.rs/: Cargo.toml  build.rs
artiq/runtime.rs/liballoc_artiq/: lib.rs
artiq/runtime.rs/libksupport/: Cargo.toml  ad9154.rs  api.rs  dyld.rs  i2c.rs  lib.rs  rtio.rs
artiq/runtime.rs/liblwip/: Cargo.toml  lib.rs
artiq/runtime.rs/liblwip-sys/: Cargo.toml  lib.rs
artiq/runtime.rs/libstd_artiq/: Cargo.toml  lib.rs
artiq/runtime.rs/libstd_artiq/io/: buffered.rs  cursor.rs  error.rs  prelude.rs
artiq/runtime.rs/libstd_artiq/time/: duration.rs  instant.rs  mod.rs
artiq/runtime.rs/src/: analyzer.rs  board.rs  buffer_logger.rs  cache.rs  clock.rs  drtio.rs  io.rs  kernel.rs  kernel_proto.rs  lib.rs  logger.rs  mailbox.rs  moninj.rs  proto.rs  rpc.rs  rpc_proto.rs  rpc_queue.rs  rtio_crg.rs  rtio_mgt.rs  sched.rs  scheduler.rs  session.rs  session_proto.rs  urc.rs
artiq/runtime.rs/src/session/: mod.rs  protocol.rs
benchmarks/: all.py  ddb.pyon  pulse_rate.py  rpc_timing.py  rtio_skew.py
conda/: README.md  artiq-dev.yaml  artiq-dev.yml  artiq-doc.yaml  artiq-doc.yml  install-artiq.py
doc/: nix.rst
examples/: al_spectroscopy.py  artiq_ipython_notebook.ipynb  collapse_test.py  compiler_test.py  coredev_test.py  ddb.pyon  ddb_sim.pyon  dds_test.py  explist.pyon  fit_image.py  flopping_f_simulation.py  flopping_f_simulation_gui.glade  flopping_f_simulation_gui.py  mandelbrot.py  photon_histogram.py  pulse_performance.py  remote_exec_controller.py  rtio_loopback.py  rtio_skew.py  simple_simulation.py  threads_test.py  threads_test_lowered.py  time_test.py  transform.py  transport.py  ttl_test.py
experimental-features/: suservo_coherent.diff  suservo_coherent_after_var.diff  suservo_var_urukul.diff
frontend/: artiq  artiq_client.py  artiq_ctlid.py  artiq_gui.py  artiq_master.py  artiq_run.py  artiqd  lda_client.py  lda_controller.py  pdq2  pdq2_client.py  pdq2_controller.py  runelf  runelf.py
lit-test/: harness.py  lit.cfg
llvm/: default.nix
misc/: 99-kc705.rules  99-papilio.rules  llvmlite-add-all-targets.patch  (+4 more)
(+1954 files in other folders)
