[package]
authors = ["The ARTIQ Project Developers"]
name = "runtime"
version = "0.0.0"

[lib]
name = "artiq_rust"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
std_artiq = { path = "libstd_artiq" }
fringe = { version = "= 1.1.0", default-features = false, features = ["alloc"] }
lwip = { path = "liblwip" }

[profile.dev]
panic = 'abort'
opt-level = 2
