[package]
authors = ["The ARTIQ Project Developers"]
name = "runtime"
version = "0.0.0"
build = "build.rs"

[build-dependencies]
walkdir = "0.1"

[lib]
name = "artiq_rust"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
std_artiq = { path = "libstd_artiq" }
lwip = { path = "liblwip" }
fringe = { version = "= 1.1.0", default-features = false, features = ["alloc"] }
log = { version = "0.3", default-features = false }
log_buffer = { version = "1.0" }
byteorder = { version = "0.5", default-features = false }

[profile.dev]
panic = 'abort'
opt-level = 2
