[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"
build = "build.rs"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
build_misoc = { path = "../libbuild_misoc" }

[dependencies]
cslice = { version = "0.3" }
io = { path = "../libio", features = ["byteorder"] }
dyld = { path = "../libdyld" }
board = { path = "../libboard" }
proto = { path = "../libproto" }
amp = { path = "../libamp" }
