[package]
authors = ["M-Labs"]
name = "board"
version = "0.0.0"
build = "build.rs"

[lib]
name = "board"
path = "lib.rs"

[build-dependencies]
build_artiq = { path = "../libbuild_artiq" }

[dependencies]
bitflags = "1.0"
byteorder = { version = "1.0", default-features = false }
log = { version = "0.3", default-features = false }

[features]
uart_console = []
