[package]
authors = ["M-Labs"]
name = "drtioaux"
version = "0.0.0"
build = "build.rs"

[lib]
name = "drtioaux"
path = "lib.rs"

[build-dependencies]
build_misoc = { path = "../libbuild_misoc" }

[dependencies]
log = { version = "0.4", default-features = false }
crc = { version = "1.7", default-features = false }
std_artiq = { path = "../libstd_artiq", features = ["alloc"] }
board = { path = "../libboard" }
byteorder = { version = "1.0", default-features = false }
