[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
std_artiq = { path = "../libstd_artiq" }
bsp = { path = "../libbsp" }
byteorder = { version = "0.5", default-features = false }

[profile.dev]
panic = 'unwind'
opt-level = 2
