[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"
build = "build.rs"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
alloc_none = { path = "../liballoc_none" }
std_artiq = { path = "../libstd_artiq" }
board = { path = "../libboard" }
byteorder = { version = "1.0", default-features = false }
