[package]
authors = ["M-Labs"]
name = "ksupport"
version = "0.0.0"
build = "build.rs"

[lib]
name = "ksupport"
path = "lib.rs"
crate-type = ["staticlib"]

[build-dependencies]
build_artiq = { path = "../libbuild_artiq" }

[dependencies]
alloc_none = { path = "../liballoc_none" }
std_artiq = { path = "../libstd_artiq" }
board = { path = "../libboard" }
byteorder = { version = "1.0", default-features = false }
