[package]
authors = ["M-Labs"]
name = "proto"
version = "0.0.0"

[lib]
name = "proto"
path = "lib.rs"

[dependencies]
byteorder = { version = "1.0", default-features = false }
cslice = { version = "0.3" }
log = { version = "0.4", default-features = false, optional = true }
io = { path = "../libio", features = ["byteorder"] }
dyld = { path = "../libdyld" }

[features]
alloc = ["io/alloc"]
