[package]
authors = ["M-Labs"]
name = "runtime"
version = "0.0.0"
build = "build.rs"

[lib]
name = "runtime"
crate-type = ["staticlib"]
path = "main.rs"

[build-dependencies]
build_misoc = { path = "../libbuild_misoc" }

[dependencies]
failure = { version = "0.1", default-features = false }
failure_derive = { version = "0.1", default-features = false }
byteorder = { version = "1.0", default-features = false }
cslice = { version = "0.3" }
log = { version = "0.4", default-features = false }
managed = { version = "= 0.7.0", default-features = false, features = ["alloc", "map"] }
eh = { path = "../libeh" }
unwind_backtrace = { path = "../libunwind_backtrace" }
io = { path = "../libio", features = ["byteorder"] }
alloc_list = { path = "../liballoc_list" }
board_misoc = { path = "../libboard_misoc", features = ["uart_console", "smoltcp"] }
logger_artiq = { path = "../liblogger_artiq" }
board_artiq = { path = "../libboard_artiq" }
proto_artiq = { path = "../libproto_artiq", features = ["log", "alloc"] }
smoltcp = { version = "0.6.0", default-features = false, features = ["rust-1_28", "alloc", "ethernet", "proto-ipv4", "proto-ipv6", "socket-tcp"] }

[dependencies.fringe]
git = "https://github.com/m-labs/libfringe"
rev = "b8a6d8f"
default-features = false
features = ["alloc"]
